[gd_scene load_steps=14 format=3 uid="uid://bh8m4ecp5otgq"]

[ext_resource type="Script" path="res://src/date/date_select_display.gd" id="1_aol0b"]
[ext_resource type="Texture2D" uid="uid://xvtogj4lsibc" path="res://data/assets/date/art/transparent_black_rounded_rect_8px9patch.png" id="1_ii56w"]
[ext_resource type="PackedScene" uid="uid://cllt6yprt8qlm" path="res://src/date/date_select_display_choice.tscn" id="2_dh26r"]
[ext_resource type="Texture2D" uid="uid://cv4ndespm5yx1" path="res://data/assets/date/art/transparent_blurple_transparent_rounded_rect_8px9patch.png" id="4_6fnap"]
[ext_resource type="Texture2D" uid="uid://comreqq5xfl1d" path="res://data/assets/date/art/transparent_pink_transparent_rounded_rect_8px9patch.png" id="5_6ltoq"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="5_etjtp"]
[ext_resource type="Texture2D" uid="uid://syc8t3prwbt3" path="res://data/assets/date/art/transparent_hotpink_transparent_rounded_rect_8px9patch.png" id="6_diraq"]
[ext_resource type="AudioStream" uid="uid://cq5h4p3gci24m" path="res://data/assets/phone/sounds/click.wav" id="8_if36n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76eq0"]
bg_color = Color(0.089862, 0.235029, 0.0272074, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdt76"]
bg_color = Color(0.172857, 0.216678, 0.288605, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_j3xrb"]
length = 0.001

[sub_resource type="Animation" id="Animation_fg43o"]
resource_name = "pop_up"
length = 0.9

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lw1tx"]
_data = {
"RESET": SubResource("Animation_j3xrb"),
"pop_up": SubResource("Animation_fg43o")
}

[node name="DateSelectDisplay" type="Node2D"]
script = ExtResource("1_aol0b")

[node name="FullBg" type="NinePatchRect" parent="."]
offset_left = 7.0
offset_top = 960.0
offset_right = 751.0
offset_bottom = 1146.0
texture = ExtResource("1_ii56w")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TalkButton" parent="." instance=ExtResource("2_dh26r")]
unique_name_in_owner = true
position = Vector2(17, 970)
texture = ExtResource("4_6fnap")
mainLabel = "Talk"

[node name="FlirtButton" parent="." instance=ExtResource("2_dh26r")]
unique_name_in_owner = true
position = Vector2(194, 970)
texture = ExtResource("5_6ltoq")
mainLabel = "Flirt"

[node name="BusinessButton" parent="." instance=ExtResource("2_dh26r")]
unique_name_in_owner = true
position = Vector2(371, 970)
texture = ExtResource("6_diraq")
mainLabel = "Poker Training"

[node name="SkipButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 629.0
offset_top = 1060.0
offset_right = 747.0
offset_bottom = 1096.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_etjtp")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_76eq0")
text = "Skip Date"

[node name="SmallTalkButton" type="Button" parent="."]
offset_left = 629.0
offset_top = 1102.0
offset_right = 747.0
offset_bottom = 1138.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_etjtp")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_mdt76")
text = "Small Talk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lw1tx")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_if36n")

[connection signal="clicked" from="TalkButton" to="." method="_on_talk_button_clicked"]
[connection signal="clicked" from="FlirtButton" to="." method="_on_flirt_button_clicked"]
[connection signal="clicked" from="BusinessButton" to="." method="_on_business_button_clicked"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="SmallTalkButton" to="." method="_on_small_talk_button_pressed"]
